@@ -142,7 +142,11 @@ class Collection(object):
     @property
     def meta(self):
         """Returns a mapping with the driver, schema, and crs properties."""
-        return {'driver': self.driver, 'schema': self.schema, 'crs': self.crs}
+        return {
+            'driver': self.driver, 
+            'schema': self.schema, 
+            'crs': self.crs,
+            'encoding': self.encoding }
 
     def filter(self, bbox=None):
         """Returns an iterator over records, but filtered by a test for
